\name{NEWS}
\title{NEWS file for the hyperdraw package}
\encoding{UTF-8}

\section{Changes in version 1.13.1}{
  \itemize{

    \item Node labels were ignoring the 'cex' node data value
    (reported by Hannes Hettling)    

  }
}